fixed resume spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,7 @@ h4.home {
 }
 
 .col-md-4 > ul {
-  margin: 1em 0 2em -1.5em;
+  margin: 0.5em 0 2em -1.5em;
 }
 
 .col-md-4 > h3 {
@@ -216,7 +216,7 @@ h4.home {
 
 .col-md-4 > h4 {
   color: black;
-  margin-bottom: -1em;
+  margin-bottom: -0.8em;
   font-size: 1.2em;
   font-weight:bold;
 }
